fixed testing and the js link

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,4 +1,5 @@
-
+@import "./foundation/scss/normalize";
+@import "./foundation/scss/foundation";
 
 
 body {
@@ -38,4 +39,5 @@ tr {
   display: inline-block;
   background-color: #698832;
 }
+
 
